--- a/TPS/No obligatorios/docker-network-tutorial-p2/servidor/Dockerfile
+++ b/TPS/No obligatorios/docker-network-tutorial-p2/servidor/Dockerfile
@@ -3,4 +3,4 @@ COPY ./src /usr/src/app
 WORKDIR /usr/src/app
 RUN javac Servidor.java
 EXPOSE 4444
-CMD ["java", "Servidor", "4444"]
+CMD ["java", "Servidor"]
