--- a/TPS/No obligatorios/docker-network-tutorial-p2/imagenpersonalizada/Dockerfile
+++ b/TPS/No obligatorios/docker-network-tutorial-p2/imagenpersonalizada/Dockerfile
@@ -1,5 +1,8 @@
-FROM bitnami/minideb:latest
-
-RUN apt update -y
-RUN apt install haproxy -y
-RUN apt install keepalived -y
+FROM haproxy:latest
+#RUN apt update -y
+#RUN apt install haproxy -y
+#RUN apt install keepalived -y
+#RUN apt install vim -y 
+COPY  haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
+#EXPOSE 8181
+#EXPOSE 15672
