--- a/TPS/No obligatorios/docker-network-tutorial-p2/imagenpersonalizada/Dockerfile
+++ b/TPS/No obligatorios/docker-network-tutorial-p2/imagenpersonalizada/Dockerfile
@@ -1,8 +1,6 @@
 FROM haproxy:latest
-#RUN apt update -y
-#RUN apt install haproxy -y
-#RUN apt install keepalived -y
-#RUN apt install vim -y 
-COPY  haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
-#EXPOSE 8181
-#EXPOSE 15672
+RUN apt update -y
+RUN apt install keepalived -y
+COPY keepalived.conf /etc/keepalived/keepalived.conf
+COPY haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
+#RUN /etc/init.d/keepalived start
