--- a/TPS/No obligatorios/docker-network-tutorial-p2/imagenpersonalizada/haproxy.cfg
+++ b/TPS/No obligatorios/docker-network-tutorial-p2/imagenpersonalizada/haproxy.cfg
@@ -1,33 +1,46 @@
 global
-	log /dev/log	local0
-	log /dev/log	local1 notice
-	chroot /var/lib/haproxy
-	stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
-	stats timeout 30s
-	
-	daemon
-
-	# Default SSL material locations
-	ca-base /etc/ssl/certs
-	crt-base /etc/ssl/private
-
-	# Default ciphers to use on SSL-enabled listening sockets.
-	# For more information, see ciphers(1SSL). This list is from:
-	#  https://hynek.me/articles/hardening-your-web-servers-ssl-ciphers/
-	# An alternative list with additional directives can be obtained from
-	#  https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=haproxy
-	ssl-default-bind-ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS
-	ssl-default-bind-options no-sslv3
+    maxconn 4096
+    daemon
 
 defaults
-	log	global
-	mode	http
-	option	httplog
-	option	dontlognull
-        timeout connect 5000
-        timeout client  50000
-        timeout server  50000
-	
+    log     global
+    mode    http
+    
+    timeout connect 5000
+    timeout client  50000
+    timeout server  50000
+    
+listen rabbitmq_service5672
+	#todo lo que venga a 5672
+	bind 0.0.0.0:5672
+	mode tcp
+		#Lo balanceo con mismo peso (RoundRobin)
+	balance roundrobin
+		#Evitar desconexiones de los CLI se configura timeout client/server 3h
+	timeout client 3h
+	timeout server 3h
+		#Configuracion clitcpka -> enviarse paquetes de Heartbeat (Cliente) y no se pierda conexion
+	option clitcpka
+
+	server stats 172.30.0.30:5672 check inter 5s rise 2 fall 3
+	server rabbit1 172.30.0.31:5672 check inter 5s rise 2 fall 3
+	server rabbit2 172.30.0.32:5672 check inter 5s rise 2 fall 3
+
+listen rabbitmq_service4369
+	#todo lo que venga a 5672
+	bind 0.0.0.0:4369
+	mode tcp
+		#Lo balanceo con mismo peso (RoundRobin)
+	balance roundrobin
+		#Evitar desconexiones de los CLI se configura timeout client/server 3h
+	timeout client 3h
+	timeout server 3h
+		#Configuracion clitcpka -> enviarse paquetes de Heartbeat (Cliente) y no se pierda conexion
+	option clitcpka
+
+	server stats 172.30.0.30:4369 check inter 5s rise 2 fall 3
+	server rabbit1 172.30.0.31:4369 check inter 5s rise 2 fall 3
+	server rabbit2 172.30.0.32:4369 check inter 5s rise 2 fall 3
 
 listen rabbitmq_management
 	#todo lo que venga a 15672
@@ -35,8 +48,7 @@ listen rabbitmq_management
     mode http
 	#Lo balanceo con mismo peso (RoundRobin)
     balance roundrobin
-    server stats 0.0.0.0:15672 check fall 3 rise 2
-    
+    server stats 172.30.0.30:15672 check fall 3 rise 2
 
 listen stats
 	#Interfaz de administracion
