--- a/TPS/No obligatorios/docker-network-tutorial/docker-compose-debian.yml
+++ b/TPS/No obligatorios/docker-network-tutorial/docker-compose-debian.yml
@@ -3,8 +3,12 @@ services:
   server:
     build: ./servidor
     ports:
-      - "4444:4444"
-  client:
-    build: ./cliente
+      - 4444:4444
+  server2:
+    build: ./servidor
+    ports:
+      - 4443:4444
   debian:
     image: debian:latest
+    ports:
+      - 22:22
