Class CH - Sincro Dist

--- a/TPS/No obligatorios/docker-network-tutorial-p2/servidor/Dockerfile
+++ b/TPS/No obligatorios/docker-network-tutorial-p2/servidor/Dockerfile
@@ -1,6 +1,8 @@
 FROM openjdk:latest
 COPY ./src /usr/src/app
 WORKDIR /usr/src/app
+RUN yum update -y 
+RUN yum install iputils -y
 RUN javac Servidor.java
 EXPOSE 4444
 CMD ["java", "Servidor"]
