--- a/TPS/No obligatorios/docker-network-tutorial-p2/servidor/Dockerfile
+++ b/TPS/No obligatorios/docker-network-tutorial-p2/servidor/Dockerfile
@@ -1,8 +1,8 @@
-FROM openjdk:latest
+FROM bitnami/minideb:latest
 COPY ./src /usr/src/app
 WORKDIR /usr/src/app
-RUN yum update -y 
-RUN yum install iputils -y
+RUN apt update -y
+RUN apt install openjdk-11-jdk -y
 RUN javac Servidor.java
 EXPOSE 4444
 CMD ["java", "Servidor"]
