Improving docker files

--- a/PI-UNLU/Clase6/elastic2/fluentd/conf/fluent.conf
+++ b/PI-UNLU/Clase6/elastic2/fluentd/conf/fluent.conf
@@ -1,18 +1,17 @@
 # Fluentd main configuration file
 # Reference: https://docs.fluentd.org/v1.0/articles/config-file
 
-# Set Fluentd to listen via http on port 8080, listening on all hosts
+# Set Fluentd to listen via http on port 9999, listening on all hosts
 <source>
-  @type http
+  @type forward
   port 9999
   bind 0.0.0.0
 </source>
 
-# Events having prefix 'dpetrocelli.**' will be stored both on Elasticsearch and files.
-<match dpetrocelli.**>
-  @type copy
+#A configuration for docker containers 
+<match docker.*.*>
+@type copy
   <store>
-    # Elastic search method 
     @type elasticsearch
     host elasticsearch
     port 9200
@@ -26,10 +25,24 @@
     flush_interval 1s
   </store>
   <store>
-    # Store to a file 
-    @type file
-    path /logs/dpetrocelli
-    flush_interval 30s
+  # All will be also printed to stdout
+    @type stdout
+  </store>
+</match>
+<match ws-logs.**>
+@type copy
+  <store>
+    @type elasticsearch
+    host elasticsearch
+    port 9200
+    index_name fluentd
+    type_name fluentd
+    logstash_format true
+    logstash_prefix fluentd
+    logstash_dateformat %Y%m%d
+    include_tag_key true
+    tag_key @log_name
+    flush_interval 1s
   </store>
   <store>
   # All will be also printed to stdout
