--- a/PI-UNLU/Clase6/elastic2/docker-compose.yml
+++ b/PI-UNLU/Clase6/elastic2/docker-compose.yml
@@ -24,3 +24,13 @@ services:
       ELASTICSEARCH_URL: http://elasticsearch:9200
     ports:
       - 5601:5601
+  web:
+    container_name: nodejs-ws
+    build: ./node-web-server
+    ports:
+      - "8080:8080"
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:9999
+        #tag: ws-logs
