--- a/PI-UNLU/Clase6/elastic2/docker-compose.yml
+++ b/PI-UNLU/Clase6/elastic2/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     environment:
       ELASTICSEARCH_URL: http://elasticsearch:9200
     ports:
-      - 5601:5601
+      - 5600:5601
   web:
     container_name: nodejs-ws
     build: ./node-web-server
@@ -33,4 +33,4 @@ services:
       driver: fluentd
       options:
         fluentd-address: localhost:9999
-        #tag: ws-logs
+        tag: ws-logs
