last version class 7

--- a/PI-UNLU/Clase6/elastic2/docker-compose.yml
+++ b/PI-UNLU/Clase6/elastic2/docker-compose.yml
@@ -27,10 +27,14 @@ services:
   web:
     container_name: nodejs-ws
     build: ./node-web-server
+    links:
+      - elasticsearch
     ports:
-      - "8080:8080"
+      - 8080:8080
     logging:
       driver: fluentd
       options:
         fluentd-address: localhost:9999
-        #tag: ws-logs
+        tag: ws-logs
+
+    
